--- a/styles/screen.css
+++ b/styles/screen.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 h2 {
-    font-weight: 300;
+    font-weight: normal;
 }
 
 h3 {
@@ -71,4 +71,8 @@ mark {
 .remark-slide-content {
     margin-top: 0;
     font-size: 26px;
+}
+
+.slim {
+    font-weight: 100;
 }
