Cohesion in slides

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -21,8 +21,17 @@ h2 {
 }
 
 h3 {
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #ccc;
     font-size: 45px !important;
+}
+
+h1 small,
+h2 small,
+h3 small,
+h4 small,
+h5 small,
+h6 small {
+    color: gray;
 }
 
 a {
@@ -43,16 +52,14 @@ iframe {
 }
 
 code {
-    background: #444;
+    background: #616161;
     color: #fff;
     padding: 2px 15px;
     margin: 3px 0;
-    border-radius: 8px;
     display: inline-block;
 }
 
 em {
-    border-radius: 5px;
     display: inline-block;
     padding: 0 15px;
     background: #2380e6;
@@ -60,7 +67,6 @@ em {
 }
 
 mark {
-    border-radius: 5px;
     display: inline-block;
     padding: 0 15px;
     background: #f0db4f;
